# wordseg

./: .gitignore  .gitlab-ci.yml  .travis.yml  .travis2readthedocs.sh  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.rst  Dockerfile  Makefile  README.md  TODO  TODO.md  TODO.org  dev.py  dev.sh  environment.yml  setup.cfg  setup.py  setup.py.in  wordseg_exemple.sh
ag/: CMakeLists.txt
ag/include/: catcount_tree.hh  gibbs.hh  logging.hh  pycky.hh  symbol.hh  trie.hpp
ag/src/: gibbs.cpp
config/ag/: Coll3syllfnc_enFestival.lt  Colloc0_CatSpa.lt  Colloc0_aesp.lt  Colloc0_enKlatt.lt
config/dpseg/: dps.conf
data/: README.md
data/ag/: Coll3syllfnc_CatSpa.lt  Colloc0syll_en.lt
data/cha/: cha2sel.sh  selcha2clean.sh
data/dpseg/: bi_dmcmc.conf  bi_ideal.conf  uni_dmcmc.conf  viterbi.conf
data/phonorules/: phonologize_qomRaspa.sh
data/syllabification/: aspanish_onsets.txt  catalan_onsets.txt  catalan_vowels.txt  chintang_onsets.txt  chintang_vowels.txt  cspanish_onsets.txt  english_vowels.txt  japanese_onsets.txt  japanese_vowels.txt  qom_onsets.txt
dev/: grammar.lt  input.txt  output.txt  run_ag.py
doc/: algo_ag.rst  algo_baseline.rst  algo_dibs.rst  algo_dpseg.rst  algo_puddle.rst  algo_tp.rst  algorithms.rst  algorithms_py.rst  appendix.rst  bash_reference.rst  commands.rst  conf.py  conf.py.in  contributing.rst  copyright.rst  evaluate.rst  evaluation.rst  folding.rst  hello_world.sh  index.rst  installation.rst  modules.rst  overview.rst  prepare.rst  python_reference.rst  release_notes.rst  separator.rst  statistics.rst  syllabification.rst  tutorial.py  tutorial.rst  tutorial.sh
dpseg/include/: SGLexicon.h  mhs.h  util.h
dpseg/src/: dpseg.cc
test/: __init__.py  conftest.py  debug_macos.sh  test_ag.py  test_algo_ag.py  test_algo_baseline.py  test_algo_dibs.py  test_algo_dpseg.py  test_algo_puddle.py  test_algo_tp.py  test_bash_python.py  test_bash_python.sh  test_dpseg.py  test_eval.py  test_evaluate.py  test_folding.py  test_pipeline.py  test_prep.py  test_prepare.py  test_puddle.py  test_separator.py  test_statistics.py  test_stats.py  test_syllabification.py  test_tp.py  test_tutorial.py  test_utils.py  test_wordseg_commands.py
test/ag/: output.prs  testeng.yld  testeng1.yld  testeng2.yld  testger.yld
test/data/: ag_testengger.lt  orthographic.txt  phonologic.txt  prepared.txt  science.txt  tagged.txt  tags.txt
tools/: README.md  functions.sh  wordseg-bash.sh  wordseg-qsub.sh  wordseg-sge.sh  wordseg-slurm.sh
tools/exemple/: input.txt  jobs.txt  test.txt  train.txt  train_dibs.txt
wordseg/: __init__.py  evaluate.py  folding.py  gold.py  prepare.py  separator.py  statistics.py  syllabification.py  utils.py
wordseg/algos/: __init__.py  ag copy.py  ag.py  baseline.py  dibs copy.py  dibs.py  dpseg.py  lx.py  puddle.py  tb.py  tp.py  treebank.py
wordseg/algos/ag/: CMakeLists.txt  Changelog.txt  Makefile  README
wordseg/algos/ag/config/: Coll3syllfnc_aesp.lt  Colloc0_enFestival.lt
wordseg/algos/ag/include/: custom-allocator-old.h  custom-allocator.h  earley.h  earley.hh  gibbs.hh  logging.hh  pstream.h  pstream.hh  py-cky.h  pycfg_type.hh  pycky.h  pycky.hh  quadmath.hh  slice-sampler.h  sym.h  tree.hpp  trie.h  trie.hpp  utility-old.h  utility.h  utility.hh  xtree.h  xtree.hh
wordseg/algos/ag/src/: catcount_tree.cpp  gammadist.cc  gammadist.cpp  gibbs.cpp  logging.cpp  main.cc  main.cpp  pycfg.cc  pycfg.cpp  pycfg_type.cpp  pycky.cpp  sym.cc  xtree.cpp
wordseg/algos/ag/test/: test_logging.cpp
wordseg/algos/ag_refactoring/include/: cat_tree.hh  earley.hh  gammadist.hh  gibbs.hh  mt19937ar.hh  pycfg_type.hh  pycky.hh  quadmath.hh  slice-sampler.hh  symbol.hh  utility.hh
wordseg/algos/ag_refactoring/src/: cat_tree.cpp  gibbs.cpp  logging.cpp  main.cpp  mt19937ar.cpp  symbol.cpp
wordseg/algos/dpseg/: CMakeLists.txt  Makefile
wordseg/algos/dpseg/include/: Base.h  Data.h  Estimators.h  SGLexicon.h  Scoring.h  Sentence.h  Unigrams.h  annealing.hh  base.hpp  chinese_restaurant.hh  data.hh  lexicon.hpp  lexicon_items.hpp  mhs.h  mhs.hpp  py_adaptor.hpp  random-mt19937ar.h  random-mt19937ar.hpp  sampler.hh  scoring.hh  sentence.hh  sg_lexicon.hpp  slice-sampler.h  slice_sampler.hpp  substring.hh  typedefs.hh  unigrams.hpp  util.h  util.hpp
wordseg/algos/dpseg/include/corpus/: corpus_base.hh  corpus_data.hh  corpus_experimental.hh
wordseg/algos/dpseg/include/data/: corpus_data.hh  data.hh  experimental_data.hh
wordseg/algos/dpseg/include/estimator/: base.hh  bigram.hh  dmcmc.hh  factory.hh  flip.hh  parameters.hh  slice.hpp  tree.hh  unigram.hh  viterbi.hh
wordseg/algos/dpseg/include/pitman_yor/: adaptor.hpp  bigrams.hpp  restaurant.hh  unigrams.hpp
wordseg/algos/dpseg/include/py/: adaptor.hpp  bigrams.hpp  chinese_restaurant.hh  restaurant.hh  unigrams.hpp
wordseg/algos/dpseg/include/sampler/: base.hh  bigram.hh  dmcmc.hh  flip.hh  parameters.hh  slice.hpp  tree.hh  unigram.hh  viterbi.hh
wordseg/algos/dpseg/include/text/: corpus_base.hh  corpus_data.hh  corpus_experimental.hh
wordseg/algos/dpseg/src/: Data.cc  Estimators.cc  Scoring.cc  Sentence.cc  annealing.cpp  chinese_restaurant.cpp  data.cpp  dpseg.cc  main.cpp  restaurant.cpp  sampler.cpp  scoring.cpp  sentence.cpp  substring.cpp
wordseg/algos/dpseg/src/corpus/: corpus_base.cpp  corpus_data.cpp  corpus_experimental.cpp
wordseg/algos/dpseg/src/data/: corpus_data.cpp  data.cpp  experimental_data.cpp
wordseg/algos/dpseg/src/estimator/: base.cpp  bigram.cpp  dmcmc.cpp  factory.cpp  flip.cpp  parameters.cpp  tree.cpp  unigram.cpp  viterbi.cpp
wordseg/algos/dpseg/src/py/: chinese_restaurant.cpp  restaurant.cpp
wordseg/algos/dpseg/src/sampler/: base.cpp  bigram.cpp  dmcmc.cpp  flip.cpp  tree.cpp  unigram.cpp  viterbi.cpp
wordseg/algos/dpseg/src/text/: corpus_base.cpp  corpus_data.cpp  corpus_experimental.cpp
wordseg/wordseg/algos/ag/: Makefile  ag  cmake_install.cmake
wordseg/wordseg/algos/dpseg/: Makefile  cmake_install.cmake  dpseg
